components/data-viewer/envs/staging/data-viewer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-viewer
  namespace: fia
spec:
  template:
    spec:
      containers:
        - name: data-viewer
          image: ghcr.io/fiaisis/data-viewer@sha256:5dfd864edf9d010d9e2f93673af7322ddb3734866ba6cb951cfafacd3e0acb65
